4.kısım/wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:    
  - port: 80
    targetPort: 80
